--- a/share/underlyings.yml
+++ b/share/underlyings.yml
@@ -954,6 +954,19 @@ WLDUSD:
   quoted_currency: WLDUSD
   submarket: smart_fx
   symbol: WLDUSD
+WLDXAU:
+  asset: XAU
+  display_name: Gold Index
+  exchange_name: METAL
+  instrument_type: smart_fx
+  market: commodities
+  market_convention:
+    delta_premium_adjusted: 0
+    delta_style: spot_delta
+  pip_size: 0.001
+  quoted_currency: WLDXAU
+  submarket: smart_fx
+  symbol: WLDXAU
 frxAUDAED:
   asset: AUD
   display_name: AUD/AED
