--- a/share/underlyings.yml
+++ b/share/underlyings.yml
@@ -2860,8 +2860,8 @@ USBNG:
   quoted_currency: USD
   submarket: us_otc_stock
   symbol: USBNG
-USBOA:
-  asset: USBOA
+USBAC:
+  asset: USBAC
   display_name: Bank of America Corporation
   exchange_name: NYSE
   instrument_type: individualstock
@@ -2872,7 +2872,7 @@ USBOA:
   pip_size: 0.01
   quoted_currency: USD
   submarket: us_otc_stock
-  symbol: USBOA
+  symbol: USBAC
 USCSCO:
   asset: USCSCO
   display_name: Cisco Systems Inc.
@@ -3341,6 +3341,19 @@ USFDX:
   quoted_currency: USD
   submarket: us_otc_stock
   symbol: USFDX
+USAIG:
+  asset: USAIG
+  display_name: American International Group Inc.
+  exchange_name: NYSE
+  instrument_type: individualstock
+  market: stocks
+  market_convention:
+    delta_premium_adjusted: 0
+    delta_style: spot_delta
+  pip_size: 0.01
+  quoted_currency: USD
+  submarket: us_otc_stock
+  symbol: USAIG
 DEBMW:
   asset: DEBMW
   display_name: BMW
@@ -3380,3 +3393,16 @@ DEBAYER:
   quoted_currency: EUR
   submarket: ge_otc_stock
   symbol: DEBAYER
+DEDBK:
+  asset: DEDBK
+  display_name: Deutsche Bank
+  exchange_name: FSE
+  instrument_type: individualstock
+  market: stocks
+  market_convention:
+    delta_premium_adjusted: 0
+    delta_style: spot_delta
+  pip_size: 0.01
+  quoted_currency: EUR
+  submarket: ge_otc_stock
+  symbol: DEDBK
