--- a/share/underlyings.yml
+++ b/share/underlyings.yml
@@ -2423,6 +2423,16 @@ frxXPTUSD:
   quoted_currency: USD
   submarket: metals
   symbol: frxXPTUSD
+cryBCCUSD:
+  asset: BCC
+  display_name: BCC/USD
+  exchange_name: CRYPTOCURRENCY
+  instrument_type: cryptocurrency
+  market: cryptocurrency
+  pip_size: 0.0001
+  quoted_currency: USD
+  submarket: non_stable_coin
+  symbol: cryBCCUSD
 cryBCHUSD:
   asset: BCH
   display_name: BCH/USD
@@ -2433,6 +2443,116 @@ cryBCHUSD:
   quoted_currency: USD
   submarket: non_stable_coin
   symbol: cryBCHUSD
+cryBCHUSD:
+  asset: BNB
+  display_name: BNB/USD
+  exchange_name: CRYPTOCURRENCY
+  instrument_type: cryptocurrency
+  market: cryptocurrency
+  pip_size: 0.0001
+  quoted_currency: USD
+  submarket: non_stable_coin
+  symbol: cryBNBUSD
+cryBTCAUD:
+  asset: BTC
+  display_name: BTC/AUD
+  exchange_name: CRYPTOCURRENCY
+  instrument_type: cryptocurrency
+  market: cryptocurrency
+  pip_size: 0.0001
+  quoted_currency: AUD
+  submarket: non_stable_coin
+  symbol: cryBTCAUD
+cryBTCBCH:
+  asset: BTC
+  display_name: BTC/BCH
+  exchange_name: CRYPTOCURRENCY
+  instrument_type: cryptocurrency
+  market: cryptocurrency
+  pip_size: 0.0001
+  quoted_currency: BCH
+  submarket: non_stable_coin
+  symbol: cryBTCBCH
+cryBTCCHF:
+  asset: BTC
+  display_name: BTC/CHF
+  exchange_name: CRYPTOCURRENCY
+  instrument_type: cryptocurrency
+  market: cryptocurrency
+  pip_size: 0.0001
+  quoted_currency: CHF
+  submarket: non_stable_coin
+  symbol: cryBTCCHF
+cryBTCETH:
+  asset: BTC
+  display_name: BTC/ETH
+  exchange_name: CRYPTOCURRENCY
+  instrument_type: cryptocurrency
+  market: cryptocurrency
+  pip_size: 0.0001
+  quoted_currency: ETH
+  submarket: non_stable_coin
+  symbol: cryBTCETH
+cryBTCEUR:
+  asset: BTC
+  display_name: BTC/EUR
+  exchange_name: CRYPTOCURRENCY
+  instrument_type: cryptocurrency
+  market: cryptocurrency
+  pip_size: 0.0001
+  quoted_currency: EUR
+  submarket: non_stable_coin
+  symbol: cryBTCEUR
+cryBTCGBP:
+  asset: BTC
+  display_name: BTC/GBP
+  exchange_name: CRYPTOCURRENCY
+  instrument_type: cryptocurrency
+  market: cryptocurrency
+  pip_size: 0.0001
+  quoted_currency: GBP
+  submarket: non_stable_coin
+  symbol: cryBTCGBP
+cryBTCJPY:
+  asset: BTC
+  display_name: BTC/JPY
+  exchange_name: CRYPTOCURRENCY
+  instrument_type: cryptocurrency
+  market: cryptocurrency
+  pip_size: 0.0001
+  quoted_currency: JPY
+  submarket: non_stable_coin
+  symbol: cryBTCJPY
+cryBTCLTC:
+  asset: BTC
+  display_name: BTC/LTC
+  exchange_name: CRYPTOCURRENCY
+  instrument_type: cryptocurrency
+  market: cryptocurrency
+  pip_size: 0.0001
+  quoted_currency: LTC
+  submarket: non_stable_coin
+  symbol: cryBTCLTC
+cryBTCNZD:
+  asset: BTC
+  display_name: BTC/NZD
+  exchange_name: CRYPTOCURRENCY
+  instrument_type: cryptocurrency
+  market: cryptocurrency
+  pip_size: 0.0001
+  quoted_currency: NZD
+  submarket: non_stable_coin
+  symbol: cryBTCNZD
+cryBTCRUB:
+  asset: BTC
+  display_name: BTC/RUB
+  exchange_name: CRYPTOCURRENCY
+  instrument_type: cryptocurrency
+  market: cryptocurrency
+  pip_size: 0.0001
+  quoted_currency: RUB
+  submarket: non_stable_coin
+  symbol: cryBTCRUB
 cryBTCUSD:
   asset: BTC
   display_name: BTC/USD
