change JD display name

--- a/share/underlyings.yml
+++ b/share/underlyings.yml
@@ -473,7 +473,7 @@ JCI:
   symbol: JCI
 JD10:
   asset: JD10
-  display_name: Volatility 10 Jump diffusion
+  display_name: Jump 10 Index
   exchange_name: RANDOM
   generation_interval: 1s
   instrument_type: stockindex
@@ -488,7 +488,7 @@ JD10:
   symbol: JD10
 JD100:
   asset: JD100
-  display_name: Volatility 100 Jump diffusion
+  display_name: Jump 100 Index
   exchange_name: RANDOM
   generation_interval: 1s
   instrument_type: stockindex
@@ -503,7 +503,7 @@ JD100:
   symbol: JD100
 JD25:
   asset: JD25
-  display_name: Volatility 25 Jump diffusion
+  display_name: Jump 25 Index
   exchange_name: RANDOM
   generation_interval: 1s
   instrument_type: stockindex
@@ -518,7 +518,7 @@ JD25:
   symbol: JD25
 JD50:
   asset: JD50
-  display_name: Volatility 50 Jump diffusion
+  display_name: Jump 50 Index
   exchange_name: RANDOM
   generation_interval: 1s
   instrument_type: stockindex
@@ -533,7 +533,7 @@ JD50:
   symbol: JD50
 JD75:
   asset: JD75
-  display_name: Volatility 75 Jump diffusion
+  display_name: Jump 75 Index
   exchange_name: RANDOM
   generation_interval: 1s
   instrument_type: stockindex
